--- a/react-webrtc-app/package.json
+++ b/react-webrtc-app/package.json
@@ -23,10 +23,11 @@
     "regenerator-runtime": "^0.13.3"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "HTTPS=true react-scripts start host=0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prestart": "./link-certificate.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
